<resources>
    <string name="app_name">방울아이</string>

    <!-- login -->
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="login">로그인</string>

    <!-- main -->
    <string name="setting">설정</string>
    <string name="clear">뒤로 가기</string>

    <!-- setting -->
    <string name="call">전화</string>
    <string name="door">출입</string>
    <string name="account">계정</string>
    <string name="sw_voice">음성 활성화</string>
    <string name="sw_popup">팝업 활성화</string>
    <string name="sw_door">가게 출입 알람</string>
    <string name="warning">※ 일부 계정만 사용 가능한 기능입니다.</string>
    <string name="logout">로그아웃</string>

    <!-- customer -->
    <string name="name">이름</string>
    <string name="order">주문</string>
    <string name="address">주소</string>
</resources>