<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="vm"
            type="com.devsung.bangull.viewmodels.CallViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="25dp"
        tools:context=".CallActivity">
        <LinearLayout
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TitleTextView"/>
            <TextView
                android:text="@{vm.name}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CustomerTextView"/>
            <TextView
                android:text="@string/order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TitleTextView"/>
            <TextView
                android:text="@{vm.order}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CustomerTextView"/>
            <TextView
                android:text="@string/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TitleTextView"/>
            <TextView
                android:text="@{vm.address}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CustomerTextView"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>