<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="vm"
            type="com.devsung.bangull.viewmodels.LoginViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        tools:context=".LoginActivity"
        tools:ignore="RtlSymmetry">
        <EditText
            android:id="@+id/email"
            android:hint="@string/email"
            android:text="@={vm.email}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@id/password"
            style="@style/BlueEditTextTheme"/>
        <EditText
            android:id="@+id/password"
            android:hint="@string/password"
            android:text="@={vm.password}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginBottom="25dp"
            app:layout_constraintBottom_toTopOf="@id/login"
            style="@style/BlueEditTextTheme"/>
        <LinearLayout
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{()->vm.login()}"
            android:background="@drawable/blue_rect_round"
            app:layout_constraintBottom_toBottomOf="parent">
            <TextView
                android:text="@string/login"
                android:textSize="@dimen/normal"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackgroundBorderless"
                style="@style/Font_Regular"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>